--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,3 +1,9 @@
+.cards__text {
+  font-family: "CabinetGrotesk-Bold", sans-serif;
+  font-size: 20px;
+  line-height: 24px;
+}
+
 .cards__list {
   display: flex;
   flex-wrap: wrap;
