--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -10,6 +10,86 @@
   align-items: center;
 }
 
+.modal__title {
+  margin: 0;
+  font-size: 16px;
+  line-height: 20px;
+  font-family: "CabinetGrotesk-Bold", sans-serif;
+  margin-bottom: 24px;
+}
+
+.modal__close {
+  position: absolute;
+  top: 20px;
+  right: 28px;
+  width: 20px;
+  height: 20px;
+  border: none;
+  background-color: #fff;
+}
+
 .modal__content {
   background-color: #fff;
+  position: relative;
+  padding: 28px 28px 36px;
+  max-width: 496px;
+  box-sizing: border-box;
+  width: 100%;
+  border-radius: 20px;
+}
+
+.modal__form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.modal__label {
+  margin-bottom: 8px;
+  margin: 0;
+  font-family: "CabinetGrotesk-Bold", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+}
+.modal__input {
+  display: block;
+  width: 400px;
+  border: none;
+  border-bottom: 1px solid #000000;
+  margin-bottom: 24px;
+}
+
+.modal__legend {
+  font-family: "CabinetGrotesk-Bold", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 12px;
+}
+
+.modal__radio-buttons {
+  border: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal__label_type_radio {
+  font-family: "CabinetGrotesk-Bold", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 8px;
+}
+
+.modal__sumbit {
+  font-family: "CabinetGrotesk-Bold", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  margin-top: 24px;
+  width: 124px;
+  height: 36px;
+  background-color: #0000004d;
+  border: 1px;
+  color: #fff;
+  border-radius: 4px;
+  font-size: 16px;
 }
