--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,6 +27,11 @@
   font-size: 20px;
 }
 
+.header__link {
+  text-decoration: none;
+  color: #000;
+}
+
 .header__user-container {
   display: flex;
   align-items: center;
