--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -27,3 +27,15 @@
   margin-top: 0;
   margin-bottom: 32px;
 }
+
+.modal__delete-btn {
+  font-family: "CabinetGrotesk-Bold", sans-serif;
+  position: absolute;
+  border: none;
+  font-size: 20px;
+  line-height: 24px;
+  background-color: #fff;
+  color: rgba(255, 77, 0, 1);
+  margin-left: 330px;
+  margin-top: -92px;
+}
