New update for my project

--- a/src/components/DeleteModal/DeleteModal.css
+++ b/src/components/DeleteModal/DeleteModal.css
@@ -1,4 +1,4 @@
-.modal__container {
+/*.modal__container {
   background-color: #fff;
   position: relative;
   padding: 28px 28px 36px;
@@ -45,4 +45,4 @@
   line-height: 24px;
   border: none;
   background-color: #fff;
-}
+}*/
