--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,6 +10,13 @@
   margin-right: 24px;
 }
 
+.header__avatar {
+  width: 100px;
+  height: 100px;
+
+  border-radius: 50%;
+}
+
 .header__date-and-location {
   font-family: "CabinetGrotesk-Bold", sans-serif;
   font-size: 20px;
