--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,8 +11,8 @@
 }
 
 .header__avatar {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
 
   border-radius: 50%;
 }
@@ -50,4 +50,20 @@
   font-size: 20px;
   line-height: 24px;
   margin: 0;
+}
+.header__signup-btn {
+  font-family: "CabinetGrotesk-Bold", sans-serif;
+  font-size: 20px;
+  line-height: 24px;
+
+  font-size: 20px;
+  border: none;
+}
+.header__login-btn {
+  font-family: "CabinetGrotesk-Bold", sans-serif;
+  font-size: 20px;
+  line-height: 24px;
+
+  font-size: 20px;
+  border: none;
 }
