--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,16 +1,33 @@
-.sidebar {
+.sidebar__user {
   display: flex;
   align-items: center;
 }
 
-.sidebar__username {
+.sidebar__user_username {
   font-family: "CabinetGrotesk-Bold", sans-serif;
   margin-left: 15px;
   font-size: 20px;
 }
 
-.sidebar__avatar {
-  width: 100px;
-  height: 100px;
+.sidebar__user_avatar {
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
+}
+
+.sidebar__options {
+  display: flex;
+  flex-direction: column;
+}
+
+.sidebar__options_profile {
+  font-family: "CabinetGrotesk-Bold", sans-serif;
+  margin-bottom: 0;
+  font-size: 20px;
+}
+
+.sidebar__options_logout {
+  font-family: "CabinetGrotesk-Bold", sans-serif;
+  margin-top: 10px;
+  font-size: 20px;
 }
