--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -55,7 +55,7 @@
   font-family: "CabinetGrotesk-Bold", sans-serif;
   font-size: 20px;
   line-height: 24px;
-
+  margin-left: 3px;
   font-size: 20px;
   border: none;
 }
