New update for my project

--- a/src/components/LoginModal/LoginModal.css
+++ b/src/components/LoginModal/LoginModal.css
@@ -3,7 +3,7 @@
   width: 440px;
 }
 
-.modal__submit_login {
+.modal__submit_signup {
   color: #0000004d;
   background-color: #fff;
   position: absolute;
