--- a/src/components/RegisterModal/RegisterModal.css
+++ b/src/components/RegisterModal/RegisterModal.css
@@ -2,7 +2,7 @@
   margin-top: 15px;
 }
 
-.modal__submit_signup {
+.modal__submit_login {
   color: #0000004d;
   background-color: #fff;
   position: absolute;
